<resources>
    <string name="app_name">Blood Hero</string>
    <string-array name="blood_group_array">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="notification_radius">
        <item>10km</item>
        <item>20km</item>
        <item>30km</item>
        <item>40km</item>
        <item>50km</item>
    </string-array>
    <string-array name="notification_radius_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>



    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Your Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Send</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>

    <!-- for into texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Hero!</string>
    <string name="slide_1_desc">Welcome to Bangladeshi realtime blood donation platform!\n Register to be a donor and requester!</string>

    <string name="slide_2_title">Search donors</string>
    <string name="slide_2_desc">Check donors with name and blood group around you on map!</string>

    <string name="slide_3_title">Send Requests</string>
    <string name="slide_3_desc">Make a request and donors will get notifications along with your location and details!</string>

    <string name="slide_4_title">Respond to requests</string>
    <string name="slide_4_desc">Click notifications to see blood group, location of requester on map and make calls!</string>





</resources>
